ZON-1292: Add font constant

--- a/sass/_constants.sass
+++ b/sass/_constants.sass
@@ -51,6 +51,7 @@ $extremhuge: em($extremhuge--px)
 // font sizes in px
 $font-xxs--px:    10px !default
 $font-xs--px:     12px !default
+$font-ss--px:     13px !default
 $font-s--px:      14px !default
 $font-mm--px:     15px !default
 $font-m--px:      16px !default
@@ -67,6 +68,7 @@ $font-xxxxxl--px: 64px !default
 // font sizes in em
 $font-xxs:   em($font-xxs--px)
 $font-xs:    em($font-xs--px)
+$font-ss:    em($font-ss--px)
 $font-s:     em($font-s--px)
 $font-mm:    em($font-mm--px)
 $font-m:     em($font-m--px)
@@ -82,6 +84,7 @@ $font-xxxxl: em($font-xxxxl--px)
 // font sizes in rem
 $font-xxs--rem:    remify($font-xxs--px)
 $font-xs--rem:     remify($font-xs--px)
+$font-ss--rem:     remify($font-ss--px)
 $font-s--rem:      remify($font-s--px)
 $font-mm--rem:     remify($font-mm--px)
 $font-m--rem:      remify($font-m--px)
