ZON-1292: Tweak CSS

--- a/sass/web.site/modules/_teaser-printbox.sass
+++ b/sass/web.site/modules/_teaser-printbox.sass
@@ -45,6 +45,9 @@
 		display: block
 		font-size: $font-ss
 
+		&:visited
+			color: $zon-red
+
 	&__button
 		display: block
 		color: $zon-charcoal
