ZON-1296: videobar: breakpointing

--- a/sass/web.site/modules/_videobar.sass
+++ b/sass/web.site/modules/_videobar.sass
@@ -17,7 +17,14 @@
 
 .video-stage-secondary
 	display: none
+	+respond-min($break-phablet-min)
+		display: block
 
+	&__title
+		display: none
+		+respond-min($break-desktop-min)
+			display: block
+			text-transform: uppercase
 
 .video-stage-footer
 
