ZON-1296: Make single file for BEM Blocks

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -20,6 +20,7 @@
 @import "modules/footer"
 @import "modules/parquet"
 @import "modules/page"
+// teaser
 @import "modules/teasers"
 @import "modules/teaser"
 @import "modules/teaser-small"
@@ -31,7 +32,9 @@
 @import "modules/teaser-parquet-small"
 @import "modules/teaser-parquet-large"
 @import "modules/snapshot"
+// videobar
 @import "modules/videobar"
+@import "modules/video-stage-heading"
 
 // ads
 @import "modules/adplaces"
