ZON-1296: add breakpoints for video-stage-main

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -36,6 +36,7 @@
 // videobar
 @import "modules/videobar"
 @import "modules/video-stage-heading"
+@import "modules/video-stage-main"
 
 // ads
 @import "modules/adplaces"
