--- a/sass/web.site/modules/_video-stage-main.sass
+++ b/sass/web.site/modules/_video-stage-main.sass
@@ -4,4 +4,6 @@
 	+respond-min($break-phablet-min)
 		margin: 0
 	+respond-min($break-desktop-min)
-		width: remify(640px)
+		display: table-cell
+		padding-right: remify(20px)
+		width: remify(620px + 20px)
