--- a/sass/web.site/modules/_videobar.sass
+++ b/sass/web.site/modules/_videobar.sass
@@ -5,17 +5,9 @@
 	font-family: $font-tabletgothic
 	color: $grey--light
 	text-align: center
+	+respond-min($break-desktop-min)
+		padding-right: 0
 
-.video-stage-secondary
-	display: none
-	+respond-min($break-phablet-min)
-		display: block
-
-	&__title
-		display: none
-		+respond-min($break-desktop-min)
-			display: block
-			text-transform: uppercase
 
 .video-stage-footer
 
