--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -37,6 +37,7 @@
 @import "modules/videobar"
 @import "modules/video-stage-heading"
 @import "modules/video-stage-main"
+@import "modules/video-stage-secondary"
 
 // ads
 @import "modules/adplaces"
