--- a/src/zeit/web/site/templates/inc/cp_area_videobar.html
+++ b/src/zeit/web/site/templates/inc/cp_area_videobar.html
@@ -1,7 +1,7 @@
 <section class="video-stage" id="video-bar">
     <!-- html5, eine section braucht eine headline, falls das seomäßig nicht geht, können wir auch nicht section nehmen -->
     <header>
-        <h6 class="video-stage-heading">Videos auf <span class="video-stage-heading__logo">ZEIT ONLINE</span></h6>
+        <h6 class="video-stage-heading">Videos auf <span class="video-stage-heading__logo icon-logo-zon-large">ZEIT ONLINE</span></h6>
     </header>
 
     <div class="video-stage-main">
