--- a/sass/web.site/modules/_video-stage-heading.sass
+++ b/sass/web.site/modules/_video-stage-heading.sass
@@ -1,12 +1,19 @@
 .video-stage-heading
+	color: #eee
 	display: inline-block
 	font-size: remify(18px)
-	font-weight: normal
+	font-weight: bold
+	letter-spacing: 0.05em
 	line-height: 1.125
 	text-align: center
 	margin: 0
 	padding: remify($small--px) 0
+	-webkit-font-smoothing: antialiased
+	+respond-min($break-phablet-min)
+		font-size: remify(24px)
 	&__logo
 		height: auto
-		width: 136px
+		width: remify(136px)
 		+image_text_replacement(inline-block, text-bottom)
+		+respond-min($break-phablet-min)
+			width: remify(197px)
