--- a/sass/web.site/modules/_video-stage-heading.sass
+++ b/sass/web.site/modules/_video-stage-heading.sass
@@ -11,6 +11,11 @@
 	-webkit-font-smoothing: antialiased
 	+respond-min($break-phablet-min)
 		font-size: remify(24px)
+	+respond-min($break-desktop-min)
+		padding: 0
+		position: absolute
+		left: remify($small--px)
+		top: remify($small--px)
 	&__logo
 		height: auto
 		width: remify(136px)
