ZON-1296: videobar: desktop layout secondary stage

--- a/sass/web.site/modules/_video-stage-main.sass
+++ b/sass/web.site/modules/_video-stage-main.sass
@@ -5,5 +5,5 @@
 		margin: 0
 	+respond-min($break-desktop-min)
 		display: table-cell
-		padding-right: remify(20px)
+		padding: remify($wide--px) remify(20px) 0 0
 		width: remify(620px + 20px)
