--- a/sass/web.site/modules/_video-stage-secondary.sass
+++ b/sass/web.site/modules/_video-stage-secondary.sass
@@ -1,16 +1,21 @@
 .video-stage-secondary
 	display: none
 	+respond-min($break-phablet-min)
+		+justify-children-horizontally('.video-small', top)
 		display: block
-		background-color: #28282e
 	+respond-min($break-desktop-min)
+		background-color: #28282e
 		display: table-cell
+		padding: 0 remify(20px)
 		vertical-align: top
 		width: remify(280px + 20px +20px)
-		padding: 0 remify(20px)
 
 	&__title
 		display: none
 		+respond-min($break-desktop-min)
+			color: #BCBCBC
 			display: block
+			font-size: remify(14px)
 			text-transform: uppercase
+			letter-spacing: 0.05em
+			margin: $page-padding 0
