--- a/sass/web.site/modules/_videobar.sass
+++ b/sass/web.site/modules/_videobar.sass
@@ -4,13 +4,10 @@
 	padding: 0 $page-padding
 	font-family: $font-tabletgothic
 	color: $grey--light
-	text-align: center
 	+respond-min($break-desktop-min)
 		padding-right: 0
 		position: relative
 
-
-.video-stage-footer
 
 .video-centerpage-link
 	+link
@@ -21,3 +18,12 @@
 	background-color: lighten(#33333A, 20%)
 	display: inline-block
 	margin: remify($small--px) auto
+
+.video-small
+	+respond-min($break-phablet-min)
+		display: table-cell
+		width: 48%
+	+respond-min($break-tablet-min)
+		width: 31.5%
+	+respond-min($break-desktop-min)
+		width: auto
