--- a/sass/web.magazin/modules/_cp-teaserbar.sass
+++ b/sass/web.magazin/modules/_cp-teaserbar.sass
@@ -10,7 +10,7 @@ $teaserbar_teaser_max_width: em(270px)
 // start: teasers //
 
 .cp_teaserbar__teasers__wrap
-    +justify-children-horizontally('div', top)
+    +justify-children-horizontally('.cp_teaserbar__teasers__wrap > div', top)
     div
         +respond-min($break-1)
             max-width: $teaserbar_teaser_max_width
