ZON-1296: fix padding in vide-header

--- a/sass/web.site/modules/_video-stage-heading.sass
+++ b/sass/web.site/modules/_video-stage-heading.sass
@@ -14,7 +14,7 @@
 	+respond-min($break-desktop-min)
 		padding: 0
 		position: absolute
-		left: remify($small--px)
+		left: $page-padding
 		top: remify($small--px)
 	&__logo
 		height: auto
