ZON-1339: Introduce new space size with awesome name

--- a/sass/_constants.sass
+++ b/sass/_constants.sass
@@ -7,6 +7,7 @@ $meta-line-height: 1.7 !default
 // margins/paddings in px
 $hair--px:         1px !default
 $dblhair--px:      2px !default
+$bristle--px:      3px !default
 $micro--px:        4px !default
 $tiny--px:         6px !default
 $thin--px:         8px !default
@@ -29,6 +30,7 @@ $extremhuge--px: 200px !default
 // margins/paddings
 $hair:       em($hair--px)
 $dblhair:    em($dblhair--px)
+$bristle:    em($bristle--px)
 $micro:      em($micro--px)
 $tiny:       em($tiny--px)
 $thin:       em($thin--px)
