--- a/sass/web.site/modules/_teaser-beta.sass
+++ b/sass/web.site/modules/_teaser-beta.sass
@@ -53,5 +53,8 @@
 		text-align: center
 		background-color: $white
 
+	&__button:visited
+		color: $zon-charcoal
+
 	&__button--inline
 		display: inline-block
