--- a/src/zeit/web/site/templates/beta.html
+++ b/src/zeit/web/site/templates/beta.html
@@ -28,9 +28,9 @@
             <p class="beta-teaser__prose">
                 Wir entwickeln die neue Version von ZEIT&nbsp;ONLINE gemeinsam mit unseren
                 Nutzerinnen und Nutzern. Wenn Sie mithelfen wollen, die neue Version zu
-                testen, bevor sie öffentlich zugänglich ist, können Sie sich für einen Beta-
-                Zugang bewerben. Schicken Sie dazu eine E&#x2011;Mail mit ihrem Community-
-                Benutzernamen an <a href="mailto:beta@zeit.de">beta@zeit.de</a>.
+                testen, bevor sie öffentlich zugänglich ist, können Sie sich für einen 
+                Beta-Zugang bewerben. Schicken Sie dazu eine E&#x2011;Mail mit ihrem 
+                Community-Benutzernamen an <a href="mailto:beta@zeit.de">beta@zeit.de</a>.
             </p>
             <div class="beta-teaser__cta">
                 <a class="beta-teaser__button" href="mailto:beta@zeit.de">E&#x2011;Mail 
@@ -44,8 +44,8 @@
                 Nutzerinnen und Nutzern. Registrieren Sie sich als Beta-Nutzer, um schon
                 heute neue Artikelformate und ein modernisiertes Design zu genießen. Helfen
                 Sie mit, die neue Version von ZEIT&nbsp;ONLINE zu testen, bevor sie öffentlich
-                zugänglich ist. Schicken Sie dazu eine E&#x2011;Mail mit ihrem Community-
-                Benutzernamen an
+                zugänglich ist. Schicken Sie dazu eine E&#x2011;Mail mit ihrem 
+                Community-Benutzernamen an
             </p>
             <p class="beta-teaser__prose">
                 <b>Bitte loggen Sie sich ein!</b>
