--- a/sass/web.site/modules/_fonts.sass
+++ b/sass/web.site/modules/_fonts.sass
@@ -4,9 +4,9 @@
 // TABLET GOTHIC ----------------------------------------
 
 // Regular
-+font-face("TabletGothic", font-files("tablet/288647_2_0.woff", "tablet/288647_2_0.ttf", "tablet/288647_2_0.eot"), false, normal, normal)
++font-face("TabletGothic", inline-font-files("tablet/288647_2_0.woff", "tablet/288647_2_0.ttf", "tablet/288647_2_0.eot"), false, normal, normal)
 // TabletBold
-+font-face("TabletGothic", font-files("tablet/28B678_0_0.woff", "tablet/28B678_0_0.ttf", "tablet/28B678_0_0.eot"), false, bold, normal)
++font-face("TabletGothic", inline-font-files("tablet/28B678_0_0.woff", "tablet/28B678_0_0.ttf", "tablet/28B678_0_0.eot"), false, bold, normal)
 // Narrow (temporarily embedded fontsquirrel font)
 +font-face("TabletGothicNarrow", inline-font-files("tablet_narrow/tablet_gothic_narrow-regular.woff", woff), false, normal, normal)
 +font-face("TabletGothicNarrow", inline-font-files("tablet_narrow/tablet_gothic_narrow-bold.woff", woff), false, bold, normal)
@@ -14,8 +14,8 @@
 // FRANZISKA --------------------------------------------
 
 // Regular
-+font-face("FranziskaWebPro", font-files("franziska/FranziskaWebPro.woff", "franziska/FranziskaWebPro.eot"), false, normal, normal)
++font-face("FranziskaWebPro", inline-font-files("franziska/FranziskaWebPro.woff", "franziska/FranziskaWebPro.eot"), false, normal, normal)
 // Demibold
-+font-face("FranziskaWebPro", font-files("franziska/FranziskaWebPro-Demibold.woff", "franziska/FranziskaWebPro-Demibold.eot"), false, bold, normal)
++font-face("FranziskaWebPro", inline-font-files("franziska/FranziskaWebPro-Demibold.woff", "franziska/FranziskaWebPro-Demibold.eot"), false, bold, normal)
 // Italic
-+font-face("FranziskaWebPro", font-files("franziska/FranziskaWebPro-Italic.woff", "franziska/FranziskaWebPro-Italic.eot"), false, normal, italic)
++font-face("FranziskaWebPro", inline-font-files("franziska/FranziskaWebPro-Italic.woff", "franziska/FranziskaWebPro-Italic.eot"), false, normal, italic)
