--- a/src/zeit/web/site/templates/beta.html
+++ b/src/zeit/web/site/templates/beta.html
@@ -45,7 +45,7 @@
                 heute neue Artikelformate und ein modernisiertes Design zu genießen. Helfen
                 Sie mit, die neue Version von ZEIT&nbsp;ONLINE zu testen, bevor sie öffentlich
                 zugänglich ist. Schicken Sie dazu eine E&#x2011;Mail mit ihrem 
-                Community-Benutzernamen an
+                Community-Benutzernamen an <a href="mailto:beta@zeit.de">beta@zeit.de</a>.
             </p>
             <p class="beta-teaser__prose">
                 <b>Bitte loggen Sie sich ein!</b>
