--- a/src/zeit/web/site/templates/inc/cp_area_printbox.html
+++ b/src/zeit/web/site/templates/inc/cp_area_printbox.html
@@ -8,20 +8,20 @@
         <span class="print-box__issue">Nº {{ box.volume }} / {{ box.year }}</span>
     </div>
     <div class="print-box__content">
-        <a href="{{ box.url }}?wt_mc=pm.intern.box.zeitde.fix.probe.homepage.cover.cross" title="{{ title }}">
-            <img class="print-box__media-item" src="http://images.zeit.de/2015/04/packshot-04-320x148.jpg">
+        <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.printbox.ausgseite.bildtext.cover.cover&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=printbox&amp;utm_content=ausgseite_bildtext_cover_cover" title="{{ title }}">
+            <img class="print-box__media-item" src="{{ box.image | default_image_url('zon-printbox-wide') }}">
         </a>
-        <a href="{{ box.url }}?wt_mc=pm.intern.box.zeitde.fix.probe.homepage.titel.cross" title="{{ title }}" class="print-box__combined-link">
+        <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.printbox.ausgseite.bildtext.headline.headline&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=printbox&amp;utm_content=ausgseite_bildtext_headline_headline" title="{{ title }}" class="print-box__combined-link">
             <h2 class="print-box__content-heading">
                 <span class="print-box__kicker">{{ box.supertitle }}</span>
                 <span class="print-box__title">{{ box.title }}</span>
             </h2>
             <p class="print-box__text">{{ box.subtitle }}</p>
         </a>
-        <a href="{{ box.url }}?wt_mc=pm.intern.box.zeitde.fix.probe.homepage.weitere.cross" class="print-box__link">
+        <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.printbox.ausgseite.bildtext.weitere.weitere&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=printbox&amp;utm_content=ausgseite_bildtext_weitere_weitere" class="print-box__link">
             Weitere Themen
         </a>
-        <a href="{{ box.url }}?wt_mc=pm.intern.box.zeitde.fix.probe.homepage.button.cross">
+        <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.printbox.ausgseite.bildtext.button.button&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=printbox&amp;utm_content=ausgseite_bildtext_button_button">
             <span class="print-box__button">Mehr erfahren</span>
         </a>
         <a href="http://leserservice.zeit.de/diesewoche/DIE-ZEIT-kostenlos-testen/index.php?r=npb" id="intern.box.zeitde.fix.probe.homepage.leserservice.text.cross" class="print-box__link">
@@ -35,16 +35,16 @@
         {{ box.supertitle }}
     </div>
     <div class="print-box__content">
-        <a href="{{ box.url }}?wt_mc=pm.intern.teaser.zeit_de.probeabo.premium_bestellstrecke.angebotsbox.headline&amp;utm_source=pm_intern&amp;utm_medium=teaser&amp;utm_campaign=zeit_de&amp;utm_content=probeabo_premium_bestellstrecke_angebotsbox_headline" title="{{ box.title }}">
+        <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.angebbox.angebseite.bildtext.headline.headline&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=angebbox&amp;utm_content=angebseite_bildtext_headline_headline" title="{{ box.title }}">
             <h2 class="print-box__title">{{ box.title }}</h2>
         </a>
-        <a href="{{ box.url }}?wt_mc=pm.intern.teaser.zeit_de.probeabo.premium_bestellstrecke.angebotsbox.coverbild&amp;utm_source=pm_intern&amp;utm_medium=teaser&amp;utm_campaign=zeit_de&amp;utm_content=probeabo_premium_bestellstrecke_angebotsbox_coverbild" title="{{ box.title }}">
-            <img class="print-box__media-item" src="http://images.zeit.de/angebote/bilder-angebotsbox/bild-angebotsbox-03.jpg">
+        <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.angebbox.angebseite.bildtext.cover.cover&utm_medium=fix&utm_source=zeitde_zonpme_int&utm_campaign=angebbox&utm_content=angebseite_bildtext_cover_cover" title="{{ box.title }}">
+            <img class="print-box__media-item" src="{{ box.image | default_image_url('zon-printbox') }}">
         </a>
-        <a href="{{ box.url }}?wt_mc=pm.intern.teaser.zeit_de.probeabo.premium_bestellstrecke.angebotsbox.text&amp;utm_source=pm_intern&amp;utm_medium=teaser&amp;utm_campaign=zeit_de&amp;utm_content=probeabo_premium_bestellstrecke_angebotsbox_text" title="{{ box.title }}">
+        <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.angebbox.angebseite.bildtext.text.text&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=angebbox&amp;utm_content=angebseite_bildtext_text_text" title="{{ box.title }}">
             <p class="print-box__text">{{ box.subtitle }}</p>
         </a>
-        <a href="{{ box.url }}?wt_mc=pm.intern.teaser.zeit_de.probeabo.premium_bestellstrecke.angebotsbox.call_to_action&amp;utm_source=pm_intern&amp;utm_medium=teaser&amp;utm_campaign=zeit_de&amp;utm_content=probeabo_premium_bestellstrecke_angebotsbox_call_to_action">
+        <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.angebbox.angebseite.bildtext.button.button&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=angebbox&amp;utm_content=angebseite_bildtext_button_button">
             <span class="print-box__button">Test-Zugang sichern</span>
         </a>
     </div>
