--- a/sass/web.site/modules/_teaser-parquet-small.sass
+++ b/sass/web.site/modules/_teaser-parquet-small.sass
@@ -24,6 +24,8 @@
 		@extend %teaser-combined-link
 	&__kicker
 		@extend %teaser-kicker
+		&--spektrum
+			color: $spektrum_de_blue
 	&__title
 		@extend %teaser-title
 		font-size: remify(18px)
