--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -40,6 +40,9 @@ $zon_mid_grey: #999
 $zon_light_grey: #CCC
 $zon_lighter_grey: #EEE
 
+// spektrum.de
+$spektrum_de_blue: #4d86a4
+
 // semantic colors
 $color-body-bg: $white
 $color-page-bg: $white
