ZON-1343: fix mobile CSS

--- a/sass/web.site/modules/_parquet.sass
+++ b/sass/web.site/modules/_parquet.sass
@@ -69,7 +69,7 @@
 			height: remify(60px)
 			left: 0
 			line-height: remify(60px)
-			padding-left: $page-padding
+			padding: 0 0 0 $page-padding
 			position: absolute
 			top: 0
 			width: 100%
