--- a/src/zeit/web/site/templates/inc/cp_area_parquet.html
+++ b/src/zeit/web/site/templates/inc/cp_area_parquet.html
@@ -2,4 +2,7 @@
     {% for row in view.area_parquet -%}
         {% include "zeit.web.site:templates/inc/parquet/parquet-row.tpl" %}
     {% endfor %}
+    <!-- just for the dev -->
+    
+    <!-- end for the dev -->
 </div>
