--- a/src/zeit/web/site/templates/inc/cp_area_parquet.html
+++ b/src/zeit/web/site/templates/inc/cp_area_parquet.html
@@ -3,6 +3,6 @@
         {% include "zeit.web.site:templates/inc/parquet/parquet-row.tpl" %}
     {% endfor %}
     <!-- just for the dev -->
-    
+    {% include "zeit.web.site:templates/inc/parquet/parquet-spektrum.html" %}
     <!-- end for the dev -->
 </div>
