--- a/src/zeit/web/site/templates/inc/parquet/parquet-spektrum.html
+++ b/src/zeit/web/site/templates/inc/parquet/parquet-spektrum.html
@@ -6,10 +6,10 @@
                 <a href="http://www.spektrum.de/astronomie" class="parquet-meta__topic-link">Astronomie</a>
             </li>
             <li>
-                <a href="http://www.spektrum.de/erde-umwelt" class="parquet-meta__topic-link">Erde &amp; Umwelt</a>
+                <a href="http://www.spektrum.de/biologie" class="parquet-meta__topic-link">Biologie</a>
             </li>
             <li>
-                <a href="http://www.spektrum.de/physik" class="parquet-meta__topic-link">Physik</a>
+                <a href="http://www.spektrum.de/psychologie-hirnforschung" class="parquet-meta__topic-link">Psychologie/Hirnforschung</a>
             </li>
         </ul>
         <div class="parquet-meta__more parquet-meta__more--spektrum">
