--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -1,9 +1,9 @@
 {% extends "zeit.web.site:templates/layout.html" %}
-{% import 'zeit.web.site:templates/macros/article_macro.tpl' as blocks with context%}
+{% import "zeit.web.site:templates/macros/article_macro.tpl" as blocks with context %}
 
 {% macro render_page(page) %}
     {% for item in page %}
-        {{ (blocks[item | block_type] or no_block)(item)}}
+        {{ (blocks[item | block_type] or blocks["no_block"])(item)}}
     {% endfor %}
 {% endmacro %}
 
