--- a/sass/web.site/modules/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/_teaser-fullwidth.sass
@@ -8,6 +8,21 @@
 	+respond-min($break-tablet-min)
 		background: none
 		margin-top: 0
+		&:before
+			content: ''
+			min-height: 100%
+			min-width: 100%
+			position: absolute
+			top: 0
+			right: 0
+			bottom: 0
+			left: 0
+			z-index: 1
+			background-color: rgba(0, 0, 0, .1)
+			opacity: 0
+			+transition(opacity .2s ease-in-out)
+		&:hover:before
+			opacity: 1
 	&__media
 		margin: 0
 		width: 100%
@@ -27,7 +42,7 @@
 			z-index: 1
 			+background-image(linear-gradient(to top, rgba($black, 1) 0%, rgba($black, 0.2) 35%, rgba($black, 0)))
 			+respond-min($break-tablet-min)
-				+background-image(linear-gradient(30deg, rgba($black, 0.6) 0%, rgba($black, 0.1) 100%))
+				+background-image(linear-gradient(15deg, rgba($black, 0.5) 0%, rgba($black, 0.05) 60%))
 	&__media-item
 		height: auto
 		width: 100%
