--- a/sass/web.site/modules/_parquet.sass
+++ b/sass/web.site/modules/_parquet.sass
@@ -75,7 +75,14 @@
 			width: 100%
 			-webkit-font-smoothing: antialiased
 			&:after
-				content: ''
+				content: '\203A' // › = Single right-pointing angle quotation mark
+				position: absolute
+				right: remify($petite--px)
+				font-size: remify(32px)
+				top: remify(-2px)
+				color: $white
+				+respond-min($break-tablet-min)
+					content: ''
 
 	&__topic-links
 		display: none
@@ -106,6 +113,14 @@
 		&--spektrum
 			+link-colors($spektrum_de_blue, $black, $spektrum_de_blue, $spektrum_de_blue)
 			font-weight: normal
+			padding-top: remify(5px)
+
+	&__more
+		&--spektrum
+			display: none
+			+respond-min($break-tablet-min)
+				display: block
+				font-size: remify(14px)
 
 .parquet-teasers
 	display: table-cell
