ZON-1343: Add spektrum SVG

--- a/src/zeit/web/site/templates/inc/parquet/parquet-spektrum.html
+++ b/src/zeit/web/site/templates/inc/parquet/parquet-spektrum.html
@@ -1,6 +1,6 @@
 <div class="parquet-row parquet-row--spektrum" id="parquet-spektrum">
     <div class="parquet-meta">
-        <a class="parquet-meta__title parquet-meta__title--spektrum" href="http://spektrum.de">Spektrum.de</a>
+        <a class="parquet-meta__title parquet-meta__title--spektrum" href="http://spektrum.de"><span class="parquet-meta__logo parquet-meta__logo--spektrum icon-logo-spektrum">Spektrum.de</span></a>
         <ul class="parquet-meta__topic-links parquet-meta__topic-links--spektrum">
             <li>
                 <a href="http://www.spektrum.de/astronomie" class="parquet-meta__topic-link">Astronomie</a>
