--- a/sass/web.site/modules/_parquet.sass
+++ b/sass/web.site/modules/_parquet.sass
@@ -22,6 +22,15 @@
 	+respond-min($break-desktop-min)
 		width: remify(240px)
 
+	&__logo
+		&--spektrum
+			background-size: contain
+			display: inline-block
+			height: remify(30px)
+			text-indent: -50000em
+			vertical-align: middle
+			width: remify(125px)
+
 	&__title
 		+link
 			color: inherit
