--- a/src/zeit/web/site/templates/inc/parquet/parquet-spektrum.html
+++ b/src/zeit/web/site/templates/inc/parquet/parquet-spektrum.html
@@ -9,7 +9,7 @@
                 <a href="http://www.spektrum.de/biologie" class="parquet-meta__topic-link">Biologie</a>
             </li>
             <li>
-                <a href="http://www.spektrum.de/psychologie-hirnforschung" class="parquet-meta__topic-link">Psychologie/&#8203;Hirnforschung</a>
+                <a href="http://www.spektrum.de/psychologie-hirnforschung" class="parquet-meta__topic-link">Psychologie</a>
             </li>
         </ul>
         <div class="parquet-meta__more parquet-meta__more--spektrum">
